Bug 814836 - <xul:deck> element messes up screen readers, r=tbsaunde, sr=roc